--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THIB</title>
-    <!-- <link rel="icon" type="image/x&#45;icon" href="./img/icomed.png"> -->
+    <link rel="icon" type="image/x-icon" href="./img/icomed.png">
     <link href="./src/index.css" rel="stylesheet">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
