--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font&#45;awesome/4.7.0/css/font&#45;awesome.min.css" /> -->
 </head>
 <body>
-    <div id="root">Hello World</div>
+    <div id="root"></div>
     <script src="./src/index.jsx" type="module"></script>
 </body>
 </html>
